packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__indexer_code_multiple_chains.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
assertion_line: 3049
expression: project_template.indexer_code
---
module Enums = {

}

module Entities = {
  type id = string

  module EmptyEntity = {
    type t = {id: id, emptyField: id}

    type getWhereFilter = {@as("id") id?: Envio.whereOperator<id>, @as("emptyField") emptyField?: Envio.whereOperator<id>}
  }

  type rec name<'entity> =
    | @as("EmptyEntity") EmptyEntity: name<EmptyEntity.t>
}

@genType
type handlerEntityOperations<'entity, 'getWhereFilter> = {
  get: string => promise<option<'entity>>,
  getOrThrow: (string, ~message: string=?) => promise<'entity>,
  getWhere: 'getWhereFilter => promise<array<'entity>>,
  getOrCreate: 'entity => promise<'entity>,
  set: 'entity => unit,
  deleteUnsafe: string => unit,
}

@genType.import(("./Types.ts", "HandlerContext"))
type handlerContext = {
  log: Envio.logger,
  effect: 'input 'output. (Envio.effect<'input, 'output>, 'input) => promise<'output>,
  isPreload: bool,
  chain: Internal.chainInfo,
  \"EmptyEntity": handlerEntityOperations<Entities.EmptyEntity.t, Entities.EmptyEntity.getWhereFilter>,
}

@genType.import(("./Types.ts", "EvmChainId"))
type chainId = [#1 | #2]

@genType
module Contract1 = {
let contractName = "Contract1"

  module NewGravatar = {

    let name = "NewGravatar"
    let contractName = contractName

    @genType
    type eventArgs = {id: bigint, owner: Address.t, displayName: string, imageUrl: string}
    /** Event params with all fields optional. Missing fields use default values. */
    type paramsConstructor = {id?: bigint, owner?: Address.t, displayName?: string, imageUrl?: string}
    @genType
    type block = Block.t
    @genType
    type transaction = Transaction.t

    @genType
    type event = {
    /** The parameters or arguments associated with this event. */
    params: eventArgs,
    /** The unique identifier of the blockchain network where this event occurred. */
    chainId: chainId,
    /** The address of the contract that emitted this event. */
    srcAddress: Address.t,
    /** The index of this event's log within the block. */
    logIndex: int,
    /** The transaction that triggered this event. Configurable in `config.yaml` via the `field_selection` option. */
    transaction: transaction,
    /** The block in which this event was recorded. Configurable in `config.yaml` via the `field_selection` option. */
    block: block,
    }

    @genType
    type handlerArgs = Internal.genericHandlerArgs<event, handlerContext>
    @genType
    type handler = Internal.genericHandler<handlerArgs>
    @genType
    type contractRegister = Internal.genericContractRegister<Internal.genericContractRegisterArgs<event, contractRegistrations>>

    @genType
    type eventFilter = {}

    @genType type eventFilters = Internal.noEventFilters

    let contractRegister: fnWithEventConfig<
      Internal.genericContractRegister<
        Internal.genericContractRegisterArgs<event, contractRegistrations>,
      >,
      HandlerTypes.eventConfig<eventFilters>,
    > = (contractRegister, ~eventConfig=?) =>
      HandlerRegister.setContractRegister(
        ~contractName,
        ~eventName=name,
        contractRegister,
        ~eventOptions=eventConfig,
      )

    let handler: fnWithEventConfig<
      Internal.genericHandler<Internal.genericHandlerArgs<event, handlerContext>>,
      HandlerTypes.eventConfig<eventFilters>,
    > = (handler, ~eventConfig=?) => {
      HandlerRegister.setHandler(
        ~contractName,
        ~eventName=name,
        handler->(
          Utils.magic: Internal.genericHandler<
            Internal.genericHandlerArgs<event, handlerContext>,
          > => Internal.genericHandler<
            Internal.genericHandlerArgs<event, Internal.handlerContext>,
          >
        ),
        ~eventOptions=eventConfig,
      )
    }
  }

  module UpdatedGravatar = {

    let name = "UpdatedGravatar"
    let contractName = contractName

    @genType
    type eventArgs = {id: bigint, owner: Address.t, displayName: string, imageUrl: string}
    /** Event params with all fields optional. Missing fields use default values. */
    type paramsConstructor = {id?: bigint, owner?: Address.t, displayName?: string, imageUrl?: string}
    @genType
    type block = Block.t
    @genType
    type transaction = Transaction.t

    @genType
    type event = {
    /** The parameters or arguments associated with this event. */
    params: eventArgs,
    /** The unique identifier of the blockchain network where this event occurred. */
    chainId: chainId,
    /** The address of the contract that emitted this event. */
    srcAddress: Address.t,
    /** The index of this event's log within the block. */
    logIndex: int,
    /** The transaction that triggered this event. Configurable in `config.yaml` via the `field_selection` option. */
    transaction: transaction,
    /** The block in which this event was recorded. Configurable in `config.yaml` via the `field_selection` option. */
    block: block,
    }

    @genType
    type handlerArgs = Internal.genericHandlerArgs<event, handlerContext>
    @genType
    type handler = Internal.genericHandler<handlerArgs>
    @genType
    type contractRegister = Internal.genericContractRegister<Internal.genericContractRegisterArgs<event, contractRegistrations>>

    @genType
    type eventFilter = {}

    @genType type eventFilters = Internal.noEventFilters

    let contractRegister: fnWithEventConfig<
      Internal.genericContractRegister<
        Internal.genericContractRegisterArgs<event, contractRegistrations>,
      >,
      HandlerTypes.eventConfig<eventFilters>,
    > = (contractRegister, ~eventConfig=?) =>
      HandlerRegister.setContractRegister(
        ~contractName,
        ~eventName=name,
        contractRegister,
        ~eventOptions=eventConfig,
      )

    let handler: fnWithEventConfig<
      Internal.genericHandler<Internal.genericHandlerArgs<event, handlerContext>>,
      HandlerTypes.eventConfig<eventFilters>,
    > = (handler, ~eventConfig=?) => {
      HandlerRegister.setHandler(
        ~contractName,
        ~eventName=name,
        handler->(
          Utils.magic: Internal.genericHandler<
            Internal.genericHandlerArgs<event, handlerContext>,
          > => Internal.genericHandler<
            Internal.genericHandlerArgs<event, Internal.handlerContext>,
          >
        ),
        ~eventOptions=eventConfig,
      )
    }
  }

  type rec eventIdentity<'event, 'paramsConstructor, 'filters> =
    | @as("NewGravatar") NewGravatar: eventIdentity<NewGravatar.event, NewGravatar.paramsConstructor, NewGravatar.eventFilter>
    | @as("UpdatedGravatar") UpdatedGravatar: eventIdentity<UpdatedGravatar.event, UpdatedGravatar.paramsConstructor, UpdatedGravatar.eventFilter>
}

@genType
module Contract2 = {
let contractName = "Contract2"

  module NewGravatar = {

    let name = "NewGravatar"
    let contractName = contractName

    @genType
    type eventArgs = {id: bigint, owner: Address.t, displayName: string, imageUrl: string}
    /** Event params with all fields optional. Missing fields use default values. */
    type paramsConstructor = {id?: bigint, owner?: Address.t, displayName?: string, imageUrl?: string}
    @genType
    type block = Block.t
    @genType
    type transaction = Transaction.t

    @genType
    type event = {
    /** The parameters or arguments associated with this event. */
    params: eventArgs,
    /** The unique identifier of the blockchain network where this event occurred. */
    chainId: chainId,
    /** The address of the contract that emitted this event. */
    srcAddress: Address.t,
    /** The index of this event's log within the block. */
    logIndex: int,
    /** The transaction that triggered this event. Configurable in `config.yaml` via the `field_selection` option. */
    transaction: transaction,
    /** The block in which this event was recorded. Configurable in `config.yaml` via the `field_selection` option. */
    block: block,
    }

    @genType
    type handlerArgs = Internal.genericHandlerArgs<event, handlerContext>
    @genType
    type handler = Internal.genericHandler<handlerArgs>
    @genType
    type contractRegister = Internal.genericContractRegister<Internal.genericContractRegisterArgs<event, contractRegistrations>>

    @genType
    type eventFilter = {}

    @genType type eventFilters = Internal.noEventFilters

    let contractRegister: fnWithEventConfig<
      Internal.genericContractRegister<
        Internal.genericContractRegisterArgs<event, contractRegistrations>,
      >,
      HandlerTypes.eventConfig<eventFilters>,
    > = (contractRegister, ~eventConfig=?) =>
      HandlerRegister.setContractRegister(
        ~contractName,
        ~eventName=name,
        contractRegister,
        ~eventOptions=eventConfig,
      )

    let handler: fnWithEventConfig<
      Internal.genericHandler<Internal.genericHandlerArgs<event, handlerContext>>,
      HandlerTypes.eventConfig<eventFilters>,
    > = (handler, ~eventConfig=?) => {
      HandlerRegister.setHandler(
        ~contractName,
        ~eventName=name,
        handler->(
          Utils.magic: Internal.genericHandler<
            Internal.genericHandlerArgs<event, handlerContext>,
          > => Internal.genericHandler<
            Internal.genericHandlerArgs<event, Internal.handlerContext>,
          >
        ),
        ~eventOptions=eventConfig,
      )
    }
  }

  module UpdatedGravatar = {

    let name = "UpdatedGravatar"
    let contractName = contractName

    @genType
    type eventArgs = {id: bigint, owner: Address.t, displayName: string, imageUrl: string}
    /** Event params with all fields optional. Missing fields use default values. */
    type paramsConstructor = {id?: bigint, owner?: Address.t, displayName?: string, imageUrl?: string}
    @genType
    type block = Block.t
    @genType
    type transaction = Transaction.t

    @genType
    type event = {
    /** The parameters or arguments associated with this event. */
    params: eventArgs,
    /** The unique identifier of the blockchain network where this event occurred. */
    chainId: chainId,
    /** The address of the contract that emitted this event. */
    srcAddress: Address.t,
    /** The index of this event's log within the block. */
    logIndex: int,
    /** The transaction that triggered this event. Configurable in `config.yaml` via the `field_selection` option. */
    transaction: transaction,
    /** The block in which this event was recorded. Configurable in `config.yaml` via the `field_selection` option. */
    block: block,
    }

    @genType
    type handlerArgs = Internal.genericHandlerArgs<event, handlerContext>
    @genType
    type handler = Internal.genericHandler<handlerArgs>
    @genType
    type contractRegister = Internal.genericContractRegister<Internal.genericContractRegisterArgs<event, contractRegistrations>>

    @genType
    type eventFilter = {}

    @genType type eventFilters = Internal.noEventFilters

    let contractRegister: fnWithEventConfig<
      Internal.genericContractRegister<
        Internal.genericContractRegisterArgs<event, contractRegistrations>,
      >,
      HandlerTypes.eventConfig<eventFilters>,
    > = (contractRegister, ~eventConfig=?) =>
      HandlerRegister.setContractRegister(
        ~contractName,
        ~eventName=name,
        contractRegister,
        ~eventOptions=eventConfig,
      )

    let handler: fnWithEventConfig<
      Internal.genericHandler<Internal.genericHandlerArgs<event, handlerContext>>,
      HandlerTypes.eventConfig<eventFilters>,
    > = (handler, ~eventConfig=?) => {
      HandlerRegister.setHandler(
        ~contractName,
        ~eventName=name,
        handler->(
          Utils.magic: Internal.genericHandler<
            Internal.genericHandlerArgs<event, handlerContext>,
          > => Internal.genericHandler<
            Internal.genericHandlerArgs<event, Internal.handlerContext>,
          >
        ),
        ~eventOptions=eventConfig,
      )
    }
  }

  type rec eventIdentity<'event, 'paramsConstructor, 'filters> =
    | @as("NewGravatar") NewGravatar: eventIdentity<NewGravatar.event, NewGravatar.paramsConstructor, NewGravatar.eventFilter>
    | @as("UpdatedGravatar") UpdatedGravatar: eventIdentity<UpdatedGravatar.event, UpdatedGravatar.paramsConstructor, UpdatedGravatar.eventFilter>
}

/** Contract configuration with name and ABI. */
type indexerContract = {
  /** The contract name. */
  name: string,
  /** The contract ABI. */
  abi: unknown,
  /** The contract addresses. */
  addresses: array<Address.t>,
}

/** Per-chain configuration for the indexer. */
type indexerChain = {
  /** The chain ID. */
  id: chainId,
  /** The chain name. */
  name: string,
  /** The block number to start indexing from. */
  startBlock: int,
  /** The block number to stop indexing at (if specified). */
  endBlock: option<int>,
  /** Whether the chain has completed initial sync and is processing live events. */
  isLive: bool,
  \"Contract1": indexerContract,
  \"Contract2": indexerContract,
}

/** Strongly-typed record of chain configurations keyed by chain ID. */
type indexerChains = {
  \"1": indexerChain,
  ethereumMainnet: indexerChain,
  \"2": indexerChain,
}

/** Metadata and configuration for the indexer. */
type indexer = {
  /** The name of the indexer from config.yaml. */
  name: string,
  /** The description of the indexer from config.yaml. */
  description: option<string>,
  /** Array of all chain IDs this indexer operates on. */
  chainIds: array<chainId>,
  /** Per-chain configuration keyed by chain ID. */
  chains: indexerChains,
}

/** Get chain configuration by chain ID with exhaustive pattern matching. */
let getChainById = (indexer: indexer, chainId: chainId): indexerChain => {
switch chainId {
  | #1 => indexer.chains.\"1"
  | #2 => indexer.chains.\"2"
}
}

@genType /** Register a Block Handler. It'll be called for every block by default. */
let onBlock: (
Envio.onBlockOptions<chainId>,
Envio.onBlockArgs<Envio.blockEvent, handlerContext> => promise<unit>,
) => unit = (
HandlerRegister.onBlock: (unknown, Internal.onBlockArgs => promise<unit>) => unit
)->Utils.magic

@tag("contract")
type eventIdentity<'event, 'paramsConstructor, 'filters> =
  | Contract1(Contract1.eventIdentity<'event, 'paramsConstructor, 'filters>)
  | Contract2(Contract2.eventIdentity<'event, 'paramsConstructor, 'filters>)

@tag("kind")
type simulateItemConstructor<'event, 'paramsConstructor, 'filters> =
  | OnEvent({
      event: eventIdentity<'event, 'paramsConstructor, 'filters>,
      params?: 'paramsConstructor,
      block?: Internal.evmBlockInput,
      transaction?: Internal.evmTransactionInput,
    })

let makeSimulateItem = (
  constructor: simulateItemConstructor<'event, 'paramsConstructor, 'filters>,
): Envio.evmSimulateItem => {
  event: (constructor->Utils.magic)["event"]["_0"],
  contract: (constructor->Utils.magic)["event"]["contract"],
  params: (constructor->Utils.magic)["params"],
  block: (constructor->Utils.magic)["block"],
  transaction: (constructor->Utils.magic)["transaction"],
}

type testIndexerProcessConfigChains = {
  \"1"?: TestIndexer.evmChainConfig,
  \"2"?: TestIndexer.evmChainConfig,
}

type testIndexerProcessConfig = {
  chains: testIndexerProcessConfigChains,
}

/** Entity operations for direct access outside handlers. */
type testIndexerEntityOperations<'entity> = {
  /** Get an entity by ID. */
  get: string => promise<option<'entity>>,
  /** Get all entities. */
  getAll: unit => promise<array<'entity>>,
  /** Get an entity by ID or throw if not found. */
  getOrThrow: (string, ~message: string=?) => promise<'entity>,
  /** Set (create or update) an entity. */
  set: 'entity => unit,
}

/** Test indexer type with process method, entity access, and chain info. */
type testIndexer = {
  /** Process blocks for the specified chains and return progress with changes. */
  process: testIndexerProcessConfig => promise<TestIndexer.processResult>,
  /** Array of all chain IDs this indexer operates on. */
  chainIds: array<chainId>,
  /** Per-chain configuration keyed by chain ID. */
  chains: indexerChains,
  \"EmptyEntity": testIndexerEntityOperations<Entities.EmptyEntity.t>,
}

@get_index external getTestIndexerEntityOperations: (testIndexer, Entities.name<'entity>) => testIndexerEntityOperations<'entity> = ""
