packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_json_code_generated_for_evm.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: json
---
{
  "version": "0.0.1-dev",
  "name": "config1",
  "description": "Gravatar for Ethereum",
  "storage": {
    "postgres": true
  },
  "evm": {
    "chains": {
      "ethereumMainnet": {
        "id": 1,
        "startBlock": 0,
        "rpcs": [
          {
            "url": "https://eth.com",
            "for": "sync",
            "initialBlockInterval": 10000,
            "backoffMultiplicative": 0.8,
            "accelerationAdditive": 2000,
            "intervalCeiling": 10000,
            "backoffMillis": 5000,
            "queryTimeoutMillis": 20000
          }
        ],
        "contracts": {
          "Contract1": {
            "addresses": [
              "0x2E645469f354BB4F5c8a05B3b30A929361cf77eC"
            ]
          }
        }
      }
    },
    "contracts": {
      "Contract1": {
        "abi": [{"type":"event","name":"NewGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false},{"type":"event","name":"UpdatedGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false}],
        "handler": "./src/EventHandler.js",
        "events": [
          {
            "name": "NewGravatar",
            "sighash": "0x9ab3aefb2ba6dc12910ac1bce4692cf5c3c0d06cff16327c64a3ef78228b130b",
            "params": [
              {
                "name": "id",
                "abiType": "uint256"
              },
              {
                "name": "owner",
                "abiType": "address"
              },
              {
                "name": "displayName",
                "abiType": "string"
              },
              {
                "name": "imageUrl",
                "abiType": "string"
              }
            ]
          },
          {
            "name": "UpdatedGravatar",
            "sighash": "0x76571b7a897a1509c641587568218a290018fbdc8b9a724f17b77ff0eec22c0c",
            "params": [
              {
                "name": "id",
                "abiType": "uint256"
              },
              {
                "name": "owner",
                "abiType": "address"
              },
              {
                "name": "displayName",
                "abiType": "string"
              },
              {
                "name": "imageUrl",
                "abiType": "string"
              }
            ]
          }
        ]
      }
    },
    "addressFormat": "checksum"
  },
  "enums": {
    "Status": [
      "ACTIVE",
      "INACTIVE"
    ]
  },
  "entities": [
    {
      "name": "EmptyEntity",
      "codeName": "EmptyEntity",
      "properties": [
        {
          "name": "id",
          "type": "string"
        },
        {
          "name": "emptyField",
          "type": "string"
        },
        {
          "name": "status",
          "type": "enum",
          "enum": "Status"
        },
        {
          "name": "optionalStatus",
          "type": "enum",
          "isNullable": true,
          "enum": "Status"
        },
        {
          "name": "related",
          "type": "string",
          "linkedEntity": "RelatedEntity"
        },
        {
          "name": "optionalRelated",
          "type": "string",
          "isNullable": true,
          "linkedEntity": "RelatedEntity"
        },
        {
          "name": "tags",
          "type": "string",
          "isArray": true
        },
        {
          "name": "optionalTags",
          "type": "string",
          "isNullable": true,
          "isArray": true
        }
      ]
    },
    {
      "name": "RelatedEntity",
      "codeName": "RelatedEntity",
      "properties": [
        {
          "name": "id",
          "type": "string"
        },
        {
          "name": "name",
          "type": "string"
        }
      ]
    }
  ]
}
