packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_json_code_with_all_options.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: json
---
{
  "version": "0.0.1-dev",
  "name": "test-all-options",
  "description": "Test config with all options set",
  "handlers": "custom/handlers",
  "resolvers": "src/Resolvers.ts",
  "fullBatchSize": 1000,
  "rollbackOnReorg": false,
  "saveFullHistory": true,
  "rawEvents": true,
  "storage": {
    "postgres": true,
    "clickhouse": true,
    "postgresColumnNameFormat": "snake_case",
    "clickhouseColumnNameFormat": "snake_case"
  },
  "evm": {
    "chains": {
      "ethereumMainnet": {
        "id": 1,
        "startBlock": 0,
        "rpcs": [
          {
            "url": "https://eth.com",
            "for": "sync",
            "initialBlockInterval": 10000,
            "backoffMultiplicative": 0.8,
            "accelerationAdditive": 2000,
            "intervalCeiling": 10000,
            "backoffMillis": 5000,
            "queryTimeoutMillis": 20000,
            "pollingInterval": 2000
          }
        ],
        "contracts": {
          "Contract1": {
            "addresses": [
              "0x2E645469f354BB4F5c8a05B3b30A929361cf77eC"
            ]
          }
        }
      }
    },
    "contracts": {
      "Contract1": {
        "abi": [{"type":"event","name":"NewGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false},{"type":"event","name":"UpdatedGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false}],
        "handler": "./src/EventHandler.js",
        "events": [
          {
            "name": "NewGravatar",
            "sighash": "0x9ab3aefb2ba6dc12910ac1bce4692cf5c3c0d06cff16327c64a3ef78228b130b",
            "params": [
              {
                "name": "id",
                "abiType": "uint256"
              },
              {
                "name": "owner",
                "abiType": "address"
              },
              {
                "name": "displayName",
                "abiType": "string"
              },
              {
                "name": "imageUrl",
                "abiType": "string"
              }
            ],
            "blockFields": [
              "parentHash",
              "miner"
            ],
            "transactionFields": [
              "hash",
              "from",
              "value"
            ]
          },
          {
            "name": "UpdatedGravatar",
            "sighash": "0x76571b7a897a1509c641587568218a290018fbdc8b9a724f17b77ff0eec22c0c",
            "params": [
              {
                "name": "id",
                "abiType": "uint256"
              },
              {
                "name": "owner",
                "abiType": "address"
              },
              {
                "name": "displayName",
                "abiType": "string"
              },
              {
                "name": "imageUrl",
                "abiType": "string"
              }
            ]
          }
        ]
      }
    },
    "addressFormat": "checksum",
    "globalBlockFields": [
      "parentHash"
    ],
    "globalTransactionFields": [
      "hash"
    ]
  },
  "enums": {
    "Status": [
      "ACTIVE",
      "INACTIVE"
    ]
  },
  "entities": [
    {
      "name": "EmptyEntity",
      "storage": {
        "postgres": true,
        "clickhouse": true
      },
      "properties": [
        {
          "name": "id",
          "type": "string"
        },
        {
          "name": "emptyField",
          "postgresDbName": "empty_field",
          "clickhouseDbName": "empty_field",
          "type": "string"
        },
        {
          "name": "status",
          "type": "enum",
          "enum": "Status"
        },
        {
          "name": "optionalStatus",
          "postgresDbName": "optional_status",
          "clickhouseDbName": "optional_status",
          "type": "enum",
          "isNullable": true,
          "enum": "Status"
        },
        {
          "name": "related",
          "type": "string",
          "linkedEntity": "RelatedEntity"
        },
        {
          "name": "optionalRelated",
          "postgresDbName": "optional_related_id",
          "clickhouseDbName": "optional_related_id",
          "type": "string",
          "isNullable": true,
          "linkedEntity": "RelatedEntity"
        },
        {
          "name": "tags",
          "type": "string",
          "isArray": true
        }
      ]
    },
    {
      "name": "RelatedEntity",
      "storage": {
        "postgres": true,
        "clickhouse": true
      },
      "properties": [
        {
          "name": "id",
          "type": "string"
        },
        {
          "name": "name",
          "type": "string"
        }
      ]
    },
    {
      "name": "UnannotatedEntity",
      "storage": {
        "clickhouse": true
      },
      "properties": [
        {
          "name": "id",
          "type": "string"
        }
      ]
    }
  ]
}
